[gd_scene load_steps=18 format=2]

[ext_resource path="res://ui/scripts/PlayerUI.gd" type="Script" id=1]
[ext_resource path="res://ui/textures/gold_icon.png" type="Texture" id=2]
[ext_resource path="res://ui/fonts/vt23 font/Adumu.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://ui/textures/hourglass.png" type="Texture" id=4]
[ext_resource path="res://ui/textures/dead.png" type="Texture" id=5]
[ext_resource path="res://ui/textures/running.png" type="Texture" id=6]
[ext_resource path="res://ui/textures/explosion.png" type="Texture" id=7]
[ext_resource path="res://ui/textures/dynamite.png" type="Texture" id=8]
[ext_resource path="res://ui/textures/pickaxe.png" type="Texture" id=9]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 2.0
content_margin_right = 2.0
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color( 0.258824, 0.14902, 0.0235294, 0.333333 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.933333, 0.745098, 0.2, 0.105882 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 10.0
expand_margin_right = 10.0
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="DynamicFont" id=2]
size = 24
outline_size = 5
outline_color = Color( 1, 1, 1, 0 )
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 27
outline_size = 5
outline_color = Color( 1, 1, 1, 0 )
use_filter = true
extra_spacing_char = 5
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 2.0
content_margin_right = 2.0
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color( 0, 0, 0, 0.262745 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 0 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 9.0
expand_margin_top = 10.0
expand_margin_bottom = 8.0

[sub_resource type="DynamicFont" id=5]
size = 29
outline_size = 5
outline_color = Color( 1, 1, 1, 0 )
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.933333, 0.745098, 0.2, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 0.631373 )
corner_radius_top_right = 8
corner_radius_bottom_right = 8

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.207843, 0.133333, 0.0156863, 0.564706 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 0.631373 )
corner_radius_top_right = 8
corner_radius_bottom_right = 8

[sub_resource type="Animation" id=8]
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/Footer/CenterContainer/PowerUpLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 2.07, 2.38 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VBoxContainer/Footer/CenterContainer/PowerUpLabel:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.25, 0.45, 0.72, 1.28, 1.48, 1.72, 2.38 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.05, 1.05 ), Vector2( 1, 1 ), Vector2( 1.05, 1.05 ), Vector2( 1, 1 ), Vector2( 1.05, 1.05 ), Vector2( 1, 1 ) ]
}

[node name="PlayerUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopBar" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1240.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3

[node name="GoldContainer2" type="Control" parent="VBoxContainer/TopBar"]
margin_right = 150.0
margin_bottom = 50.0
rect_min_size = Vector2( 150, 0 )

[node name="TimerButton" type="Button" parent="VBoxContainer/TopBar/GoldContainer2"]
margin_right = 127.0
margin_bottom = 46.0
focus_mode = 0
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.933333, 0.862745, 0.603922, 1 )
enabled_focus_mode = 0
text = "120 s"
icon = ExtResource( 4 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Space" type="Control" parent="VBoxContainer/TopBar"]
margin_left = 154.0
margin_right = 154.0
margin_bottom = 50.0

[node name="GoldContainer3" type="Control" parent="VBoxContainer/TopBar"]
margin_left = 158.0
margin_right = 358.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 0 )

[node name="NPCs" type="Button" parent="VBoxContainer/TopBar/GoldContainer3"]
margin_left = -9.0
margin_right = 140.0
margin_bottom = 46.0
focus_mode = 0
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.933333, 0.862745, 0.603922, 1 )
enabled_focus_mode = 0
text = "0/4"
icon = ExtResource( 5 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoldContainer" type="Control" parent="VBoxContainer/TopBar"]
margin_left = 362.0
margin_right = 362.0
margin_bottom = 50.0

[node name="GoldButton" type="Button" parent="VBoxContainer/TopBar/GoldContainer"]
margin_left = -32.0
margin_right = 159.0
margin_bottom = 46.0
focus_mode = 0
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.933333, 0.862745, 0.603922, 1 )
enabled_focus_mode = 0
text = "0 / 20 kg"
icon = ExtResource( 2 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterSpace" type="Control" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 1240.0
margin_bottom = 552.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Footer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 556.0
margin_right = 1240.0
margin_bottom = 616.0
rect_min_size = Vector2( 0, 60 )

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/Footer"]
margin_right = 1240.0
margin_bottom = 60.0
size_flags_horizontal = 3

[node name="PowerUpLabel" type="Label" parent="VBoxContainer/Footer/CenterContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 441.0
margin_top = 16.0
margin_right = 799.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 3 )
text = "VELOCITY INCREASED!"
align = 1

[node name="Footer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 620.0
margin_right = 1240.0
margin_bottom = 680.0
rect_min_size = Vector2( 0, 60 )

[node name="Ranking" type="Control" parent="VBoxContainer/Footer2"]
margin_right = 20.0
margin_bottom = 60.0
rect_min_size = Vector2( 20, 0 )

[node name="Center" type="CenterContainer" parent="VBoxContainer/Footer2"]
margin_left = 24.0
margin_right = 1036.0
margin_bottom = 60.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Footer2/Center"]
margin_left = 277.0
margin_right = 735.0
margin_bottom = 60.0

[node name="DynamitesContainer" type="Control" parent="VBoxContainer/Footer2/Center/HBoxContainer"]
margin_right = 150.0
margin_bottom = 60.0
rect_min_size = Vector2( 150, 60 )

[node name="DynamitesButton" type="Button" parent="VBoxContainer/Footer2/Center/HBoxContainer/DynamitesContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -91.0
margin_top = -17.0
margin_right = 30.0
margin_bottom = 31.0
focus_mode = 0
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.9375, 0.423376, 0.377197, 1 )
enabled_focus_mode = 0
text = "2"
icon = ExtResource( 8 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RangeContainer" type="Control" parent="VBoxContainer/Footer2/Center/HBoxContainer"]
margin_left = 154.0
margin_right = 304.0
margin_bottom = 60.0
rect_min_size = Vector2( 150, 60 )

[node name="RangeButton" type="Button" parent="VBoxContainer/Footer2/Center/HBoxContainer/RangeContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -17.0
margin_right = 30.0
margin_bottom = 30.677
focus_mode = 0
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.909804, 0.482353, 0.27451, 1 )
enabled_focus_mode = 0
text = "2.5"
icon = ExtResource( 7 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeedContainer" type="Control" parent="VBoxContainer/Footer2/Center/HBoxContainer"]
margin_left = 308.0
margin_right = 458.0
margin_bottom = 60.0
rect_min_size = Vector2( 150, 60 )

[node name="SpeedButton" type="Button" parent="VBoxContainer/Footer2/Center/HBoxContainer/SpeedContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -17.0
margin_right = 30.0
margin_bottom = 30.677
focus_mode = 0
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.189667, 0.606637, 0.882813, 1 )
enabled_focus_mode = 0
text = "8"
icon = ExtResource( 6 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PowerUpTimer" type="Control" parent="VBoxContainer/Footer2"]
margin_left = 1040.0
margin_right = 1240.0
margin_bottom = 60.0
rect_min_size = Vector2( 200, 0 )

[node name="PowerUpProgress" type="ProgressBar" parent="VBoxContainer/Footer2/PowerUpTimer"]
visible = false
anchor_right = 1.0
margin_right = -1.52588e-05
margin_bottom = 26.0
custom_styles/fg = SubResource( 6 )
custom_styles/bg = SubResource( 7 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PowerUpTimerTexture" type="TextureRect" parent="VBoxContainer/Footer2/PowerUpTimer"]
visible = false
margin_left = -33.9188
margin_top = -2.28461
margin_right = -3.91876
margin_bottom = 27.7154
rect_min_size = Vector2( 30, 30 )
rect_scale = Vector2( 0.8, 0.8 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 9 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/ShowPowerUpText = SubResource( 8 )
